--- a/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
+++ b/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.adminpc.championsrecycler.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/my_recycler_view"
+       android:layout_width="368dp"
+       android:layout_height="wrap_content"
+       android:scrollbars="vertical"
+       tools:layout_editor_absoluteY="0dp"
+       tools:layout_editor_absoluteX="8dp">
+
+
+   </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
