--- a/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
+++ b/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,11 +10,9 @@
        android:id="@+id/my_recycler_view"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
-       android:scrollbars="vertical"
-       tools:layout_editor_absoluteY="0dp"
-       tools:layout_editor_absoluteX="8dp">
+       android:scrollbars="vertical">
 
 
    </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
