--- a/ChampionsRecycler/app/src/main/res/layout/my_text_view.xml
+++ b/ChampionsRecycler/app/src/main/res/layout/my_text_view.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+
+
+
+<ImageView
+    android:id="@+id/champView"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
      >
 </ImageView>
+    <TextView
+        android:id="@+id/cptTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
