--- a/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
+++ b/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.adminpc.championsrecycler.MainActivity">
-
+   <EditText
+       android:id="@+id/searchbar"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:hint="Saisissez le nom d'un champion"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="368dp"
