--- a/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
+++ b/ChampionsRecycler/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,10 @@
        android:hint="Saisissez le nom d'un champion"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
-       android:layout_width="368dp"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:scrollbars="vertical">
+       android:scrollbars="vertical"
+       >
 
 
    </android.support.v7.widget.RecyclerView>
